--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,37 +13,26 @@ defmt = { version = "0.3.8" }
 defmt-rtt = { version = "0.4.1" }
 panic-probe = { version = "0.3.2", features = ["print-defmt"] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
-stm32-metapac = { version = "15.0.0", features = ["stm32wb55vg"] }
-nalgebra = { version = "*", default-features = false, features = ["libm"] }
-libm = "0.2.8"
-micromath = { version = "2.1.0", features = ["vector"] }
-embedded-graphics = { version = "0.8" }
-num-traits = { version = "0.2.19", default-features = false, features = [
-	"libm",
-] }
-
-[dependencies.embedded-hal-async]
-version = "1"
-features = ["defmt-03"]
+embedded-hal-async = { version = "1", features = ["defmt-03"] }
 
 [dependencies.embassy-time]
 git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
-features = ["tick-hz-32_768", "defmt"]
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
+features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"]
 
 [dependencies.embassy-sync]
 git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
 features = ["defmt"]
 
 [dependencies.embassy-futures]
 git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
 features = ["defmt"]
 
 [dependencies.embassy-executor]
 git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
 features = [
 	"arch-cortex-m",
 	"executor-thread",
@@ -52,9 +41,24 @@ features = [
 	"defmt",
 ]
 
+[dependencies.embassy-embedded-hal]
+git = "https://github.com/embassy-rs/embassy"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
+features = ["defmt"]
+
+[dependencies.embassy-usb]
+git = "https://github.com/embassy-rs/embassy"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
+features = ["defmt", "max-interface-count-4", "max-handler-count-4"]
+
+[dependencies.embassy-stm32-wpan]
+git = "https://github.com/embassy-rs/embassy"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
+features = ["stm32wb55vg", "defmt", "ble"]
+
 [dependencies.embassy-stm32]
 git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
+rev = "eb91089a6c1d2a0fe23f9ef27dc9330cca08d441"
 features = [
 	"memory-x",
 	"stm32wb55vg",
@@ -63,21 +67,6 @@ features = [
 	"unstable-pac",
 	"defmt",
 ]
-
-[dependencies.embassy-embedded-hal]
-git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
-features = ["defmt"]
-
-[dependencies.embassy-usb]
-git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
-features = ["defmt", "max-interface-count-4", "max-handler-count-4"]
-
-[dependencies.embassy-stm32-wpan]
-git = "https://github.com/embassy-rs/embassy"
-rev = "6e0b08291b63a0da8eba9284869d1d046bc5dabb"
-features = ["stm32wb55vg", "defmt", "ble"]
 
 [profile.dev]
 debug = true
