--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "nightly-2024-10-02"
-components = ["rust-src", "rustfmt", "llvm-tools", "miri"]
+channel = "nightly-2024-09-06"
+components = ["rust-src", "rustfmt", "llvm-tools", "rust-analyzer"]
 targets = ["thumbv7em-none-eabihf"]
